<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_sure">Not sure</string>
    <string name="app_name">SASSEMA Survey App</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Survey</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hint_id">Your ID number…</string>
    <string name="logo_description">App Logo</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome to the SASSEMA Survey App</string>
    <string name="unavailable">The survey is currently closed. Please wait until %s</string>
    <string name="please_tap_start">Please tap on Start to begin the survey</string>
    <string name="PS_Answer1">Never</string>
    <string name="PS_Answer2">Almost Never</string>
    <string name="PS_Answer3">Sometimes</string>
    <string name="PS_Answer4">Fairly Often</string>
    <string name="PS_Answer5">Often</string>
    <string name="GAD_Answer1">Not at all</string>
    <string name="GAD_Answer2">Several of the days</string>
    <string name="GAD_Answer3">Over half the days</string>
    <string name="GAD_Answer4">Nearly every day</string>
    <string name="GADQ49_Answer1">Not difficult at all</string>
    <string name="GADQ49_Answer2">Somewhat difficult</string>
    <string name="GADQ49_Answer3">Very difficult</string>
    <string name="GADQ49_Answer4">Extremely difficult</string>
    <string name="ADHD_Answer1">Never or rarely</string>
    <string name="ADHD_Answer2">Sometimes</string>
    <string name="ADHD_Answer3">Often</string>
    <string name="ADHD_Answer4">Very Often</string>
    <string name="school">School</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="social_relationships">Social Relationships</string>
    <string name="PSQI_Answer1">0 Times</string>
    <string name="PSQI_Answer2">1–3 Times</string>
    <string name="PSQI_Answer3">4–8 Times</string>
    <string name="PSQI_Answer4">9+ Times</string>
    <string name="PS">The questions in this scale ask you about your feelings and thoughts during the LAST MONTH.
In each case, you will be asked to indicate by selecting how often you felt or thought a certain
way.</string>
    <string name="PSQ12">Q1 In the last month, how often have you been upset because of something that happened unexpectedly?</string>
    <string name="PSQ13">Q2 In the last month, how often have you felt that you were unable to control the important
things in your life?</string>
    <string name="PSQ14">Q3 In the last month, how often have you felt nervous and "stressed?"</string>
    <string name="PSQ15">Q4 In the last month, how often have you felt confident about your ability to handle your
personal problems?</string>
    <string name="PSQ16">Q5 In the last month, how often have you felt that things were going your way?</string>
    <string name="PSQ17">Q6 In the last month, how often have you found that you could not cope with all the things you
had to do?</string>
    <string name="PSQ19">Q7 In the last month, how often have you been able to control irritations in your life?</string>
    <string name="PSQ20">Q8 In the last month, how often have you felt that you were on top of things?</string>
    <string name="PSQ21">Q9 In the last month, how often have you been angered because of things that were outside
your control?</string>
    <string name="PSQ22">Q10 In the last month, how often have you felt difficulties were piling up so high that you could
not overcome them?</string>
    <string name="GAD">Over the last 2 WEEKS, how often have you been bothered by the following problems?</string>
    <string name="GADQ43">Q1 Not being able to stop or control worrying</string>
    <string name="GADQ50">Q2 Feeling nervous, anxious, or on edge</string>
    <string name="GADQ44">Q3 Worrying too much about different things</string>
    <string name="GADQ45">Q4 Trouble relaxing</string>
    <string name="GADQ46">Q5 Being so restless that it\'s hard to sit still</string>
    <string name="GADQ47">Q6 Becoming easily annoyed or irritable</string>
    <string name="GADQ48">Q7 Feeling afraid as if something awful might happen</string>
    <string name="GADQ49">Q8 If you checked off any problems, how difficult have these made it for you to do your work, take care of things at home, or get along with other people?</string>
    <string name="ADHD">Please choose the response below that best describes your behavior DURING THE PAST
6 MONTHS.</string>
    <string name="ADHDQ100">Q1 Fail to give close attention to details or make careless mistakes in my work or other activities.</string>
    <string name="ADHDQ101">Q2 Difficulty sustaining my attention in tasks or fun activities.</string>
    <string name="ADHDQ102">Q3 Don’t listen when spoken to directly.</string>
    <string name="ADHDQ103">Q4 Don’t follow through on instructions and fail to finish work or chores.</string>
    <string name="ADHDQ104">Q5 Have difficulty organizing tasks and activities.</string>
    <string name="ADHDQ105">Q6 Avoid, dislike, or am reluctant to engage in tasks that require sustained mental effort.</string>
    <string name="ADHDQ106">Q7 Lose things necessary for tasks or activities.</string>
    <string name="ADHDQ107">Q8 Easily distracted by extraneous stimuli or irrelevant thoughts.</string>
    <string name="ADHDQ108">Q9 Forgetful in daily activities.</string>
    <string name="ADHDQ111">Q10 Fidget with hands or feet or squirm in seat.</string>
    <string name="ADHDQ112">Q11 Leave my seat in classrooms or in other situations in which remaining seated is expected.</string>
    <string name="ADHDQ113">Q12 Shift around excessively or feel restless or hemmed in.</string>
    <string name="ADHDQ114">Q13 Have difficulty engaging in leisure activities quietly (feel uncomfortable, or am loud or noisy).</string>
    <string name="ADHDQ115">Q14 I am “on the go” or act as if “driven by a motor” (or I feel like I have to be busy or always doing something).</string>
    <string name="ADHDQ117">Q15 Talk excessively (in social situations).</string>
    <string name="ADHDQ118">Q16 Blurt out answers before questions have been completed, complete others’ sentences, or jump the gun.</string>
    <string name="ADHDQ119">Q17 Have difficulty awaiting my turn.</string>
    <string name="ADHDQ120">Q18 Interrupt or intrude on others (butt into conversations or activities without permission or take over what others are doing).</string>
    <string name="ADHDQ121">Q19 Prone to daydreaming when I should be concentrating on something or working.</string>
    <string name="ADHDQ122">Q20 Have trouble staying alert or awake in boring situations.</string>
    <string name="ADHDQ123">Q21 Easily confused.</string>
    <string name="ADHDQ124">Q22 Easily bored.</string>
    <string name="ADHDQ125">Q23 Spacey or “in a fog”.</string>
    <string name="ADHDQ126">Q24 Lethargic, more tired than others.</string>
    <string name="ADHDQ127">Q25 Underactive or have less energy than others.</string>
    <string name="ADHDQ128">Q26 Slow moving.</string>
    <string name="ADHDQ129">Q27 I don’t seem to process information as quickly or as accurately as others.</string>
    <string name="ADHDQ130">Q28 Did you experience any of these 27 symptoms at least “Often” or more frequently (Did you circle a 3 or a 4 above)?</string>
    <string name="ADHDQ131">Q29 If so, how old were you when these symptoms began?</string>
    <string name="ADHDQ132">Q30 If so, in which of these settings did those symptoms impair your functioning? Place a checkmark next to all of the areas that apply to you.</string>
    <string name="ADHDQ259">Q31 Have you ever been diagnosed with ADHD or ADD? (Attention-Deficit Hyperactivity Disorder or Attention Deficit Disorder)</string>
    <string name="ADHDQ260">Q32 Do you still have ADHD or ADD?</string>
    <string name="PSQIQ1">During the past month, when have you usually gone to bed at night?</string>
    <string name="PSQIQ2">During the past month, how long (in minutes) does it usually take you to fall asleep each
night?</string>
    <string name="PSQIQ3">During the past month, when have you usually gotten up in the morning?</string>
    <string name="PSQIQ4">During the past month, how many hours of actual sleep did you get at night? (This may
be different than the number of hours you spend in bed.)</string>
    <string name="PSQIQ5">During the past month, how often have you had trouble sleeping because you…</string>
    <string name="PSQIQ6">cannot get to sleep within 30 minutes</string>
    <string name="PSQIQ7">wake up in the middle of the night or early morning</string>
    <string name="PSQIQ8">have to get up to use the bathroom</string>
    <string name="PSQIQ9">cannot breathe comfortably</string>
    <string name="PSQIQ10">cough or snore loudly</string>
    <string name="PSQIQ11">feel too cold</string>
    <string name="PSQIQ12">feel too hot</string>
    <string name="PSQIQ13">have bad dreams</string>
    <string name="PSQIQ14">have pain</string>
    <string name="PSQIQ15">other</string>
    <string name="QIDS">Check the response to each item that best describes you for the past SEVEN DAYS.</string>
    <string name="QIDSQ1">Falling asleep:</string>
    <string name="QIDSQ1_Answer1">I never take longer than 30 minutes to fall asleep.</string>
    <string name="QIDSQ1_Answer2">I take at least 30 minutes to fall asleep, less than
 half the time.</string>
    <string name="QIDSQ1_Answer3">I take at least 30 minutes to fall asleep, more than
 half the time.</string>
    <string name="QIDSQ1_Answer4">I take more than 60 minutes to fall asleep, more than
 half the time.</string>
    <string name="QIDSQ2">Sleep During the Night:</string>
    <string name="QIDSQ2_Answer1">I do not wake up at night.</string>
    <string name="QIDSQ2_Answer2">I have a restless, light sleep with a few brief
 awakenings each night.</string>
    <string name="QIDSQ2_Answer3">I wake up at least once a night, but I go back to
 sleep easily.</string>
    <string name="QIDSQ2_Answer4">I awaken more than once a night and stay awake
 for 20 minutes or more, more than half the time.</string>
    <string name="QIDSQ3">Waking Up Too Early:</string>
    <string name="QIDSQ3_Answer1">Most of the time, I awaken no more than 30 minutes
 before I need to get up.</string>
    <string name="QIDSQ3_Answer2"> More than half the time, I awaken more than 30
 minutes before I need to get up.</string>
    <string name="QIDSQ3_Answer3">I almost always awaken at least one hour or so
 before I need to, but I go back to sleep eventually.</string>
    <string name="QIDSQ3_Answer4"> I awaken at least one hour before I need to, and
 can\'t go back to sleep.</string>
    <string name="QIDSQ4">Sleeping Too Much:</string>
    <string name="QIDSQ4_Answer1">I sleep no longer than 7–8 hours/night, without napping during the day.</string>
    <string name="QIDSQ4_Answer2">I sleep no longer than 10 hours in a 24-hour period including naps.</string>
    <string name="QIDSQ4_Answer3">I sleep no longer than 12 hours in a 24-hour period including naps.</string>
    <string name="QIDSQ4_Answer4">I sleep longer than 12 hours in a 24-hour period including naps.</string>
    <string name="QIDSQ5">Feeling Sad:</string>
    <string name="QIDSQ5_Answer1">I do not feel sad.</string>
    <string name="QIDSQ5_Answer2">I feel sad less than half the time.</string>
    <string name="QIDSQ5_Answer3">I feel sad more than half the time.</string>
    <string name="QIDSQ5_Answer4">I feel sad nearly all of the time.</string>
    <string name="QIDSQ6">Decreased Appetite:</string>
    <string name="QIDSQ6_Answer1">There is no change in my usual appetite.</string>
    <string name="enterID">Welcome! Please enter your 6 digit ID number!</string>
</resources>