<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_gad_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GADActivity"
    android:background = "@drawable/gradient_background_questions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAD"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ43"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ43"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ50"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ50"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ44"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ44"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ45"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ45"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ46"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ46"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ47"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ47"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ48"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/gad_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ48"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GADQ49"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <include
                layout="@layout/difficulty_question_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_GADQ49"/>

            <Button
                android:id="@+id/button_fourth"
                android:layout_width="137dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/buttonGreen"
                android:text="@string/next"
                android:textSize="24sp"
                app:cornerRadius="10dp"
                app:iconPadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>