<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/radiogroup">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/questionBlue"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/ADHD_Answer1"
            android:textColor="@color/questionBlue"
            android:textSize="16sp"
            style="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/questionBlue"
            android:minHeight="0dp"
            android:text="@string/ADHD_Answer2"
            android:textColor="@color/questionBlue"
            android:textSize="16sp"
            style="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/questionBlue"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/ADHD_Answer3"
            android:textColor="@color/questionBlue"
            android:textSize="16sp"
            style="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/questionBlue"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/ADHD_Answer4"
            android:textColor="@color/questionBlue"
            android:textSize="16sp"
            style="@style/CustomRadioButton"/>

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
